Fixed big notices margin on mobile
(In fact, non-cleared featurettes floats)

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -154,6 +154,12 @@
     border-bottom: solid 1px #3f9718;
 }
 
+#homepage #featurettes:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 #homepage #featurettes article {
     background-position: center center;
     background-size: cover;
